# mensageria-mvp

./: .gitignore  Dockerfile  README.md  app.py  mvp_algoritmo_divisao_equipes.ipynb  mvp_algoritmo_selecao_diaria.ipynb  passo1_mvp_algoritmo_selecao_diaria.ipynb  passo_1_mvp_algoritmo_selecao_diaria.ipynb  passo_2_match_com_equipe_e_upload_turn.ipynb  pyproject.toml  requirements.txt
.github/workflows/: master_deploy.yml
journeys/: chatbot-cidadaos.md  chatbot-coeqs.md  menu_geral_usuarios.md
selecao-usuarios/: mvp_algoritmo_divisao_equipes.ipynb  mvp_algoritmo_selecao_diaria.ipynb  passo1_mvp_algoritmo_selecao_diaria.ipynb  passo_1_mvp_algoritmo_selecao_diaria.ipynb  passo_1_mvp_algoritmo_selecao_diaria.py  passo_2_match_com_equipe_e_upload_turn.ipynb  passo_2_match_com_equipe_e_upload_turn.py  passo_3_envio_de_mensagens.ipynb  passo_3_envio_de_mensagens.py  passo_3_programa_envio_de_mensagens.py  requirements.txt  teste_api2.py
src/: __init__.py  bd.py  loggers.py
src/scripts/: passo_1_selecao_cidadao.py  passo_2_match_com_equipe_e_upload_turn.py  passo_3_envio_de_mensagens.py
src/scripts/primeiro_ciclo/: passo_1_selecao_cidadao.py  passo_2_match_com_equipe_e_upload_turn.py  passo_3_envio_de_mensagens.py
src/scripts/segundo-ciclo/: gerenciar_contatos.py
src/scripts/segundo_ciclo/: enviar_mensagens.py  gerenciar_contatos.py  utilitarios.py
